# cmsml

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.py
.github/ISSUE_TEMPLATE/: feature-suggestion.md
.github/actions/build-image/: action.yml
.github/workflows/: deploy_images.yml  lint_and_test.yml  publish_pypi.yml
cmsml/: __init__.py  __meta__.py  lazy_importer.py  lazy_loader.py  util.py
cmsml/keras/: __init__.py  callbacks.py
cmsml/scripts/: __init__.py  check_aot_compatibility.py  compile_tf_graph.py  open_tf_graph.py  specialize_model.py
cmsml/tensorflow/: __init__.py  aot.py  tools.py
cmsml/to_integrade/: DeepTau_utilis.py  get_compatible_ops.py  measure_time_toy_network.py  ops.txt  ops_check.py  tensorflow_utilis.py  tool_convert_DeepTau_to_static.py  tool_convert_model_shape_to_static.py  tool_freeze_tf_graph.py
cmsml/to_integrate/: ReadPerformanceSqlite_V1.py  check_aot_compatibility.py  convert_model.py  create_toy_frozen.py  get_compatible_ops.py  measure_time_DeepTau.py  specialize_model.py  tensorflow_utilis.py
cmsml/to_integrate/compat_ops_tables/: 2_6_4_XLA_CPU_JIT.txt
cmsml/to_integrate/saved_model_12_128/variables/: variables.data-00000-of-00001  variables.index
cmsml/to_integrate/tests/: test_aot_compat_test.py  test_aot_compatiblity.py  test_convert_model.py
cmsml/to_integrate/tests/compat_ops_tables/: XLA_GPU_JIT_old.txt
cmsml/to_integrate/tests/test_models/static_models/keras_model/variables/: variables.data-00000-of-00001  variables.index
cmsml/to_integrate/tests/test_models/test_keras_model/variables/: variables.data-00000-of-00001  variables.index
cmsml/to_integrate/tests/test_models/test_saved_model/variables/: variables.data-00000-of-00001  variables.index
docker/: Dockerfile_27  Dockerfile_27_testing  Dockerfile_310  Dockerfile_310_testing  Dockerfile_311  Dockerfile_311_cuda  Dockerfile_311_testing  Dockerfile_312  Dockerfile_36  Dockerfile_36_testing  Dockerfile_37  Dockerfile_37_testing  Dockerfile_38  Dockerfile_38_testing  Dockerfile_39  Dockerfile_39_base  Dockerfile_39_testing  Dockerfile_docs  build.sh
docs/: clis.rst  conf.py  index.rst  requirements.txt  saving.rst
docs/_extensions/: pydomain_patch.py
docs/_static/: styles_alabaster.css  styles_common.css  styles_sphinx_book_theme.css  styles_sphinx_rtd_theme.css
docs/api/: index.rst  keras.rst  tensorflow.rst  util.rst
tests/: __init__.py  docker.sh  lint.sh  test_aot.py  test_compile_tf_graph.py  test_keras_callbacks.py  test_lazy_loader.py  test_tensorflow.py  test_util.py
