[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]

name = "cmsml"
authors = [
    {name = "Marcel Rieger", email = "marcel.rieger@cern.ch"},
]
description = "Python package of the CMS Machine Learning Group"
keywords = [
    "CERN",
    "CMS",
    "LHC",
    "machine learning",
    "tensorflow",
    "keras",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
]
license = {file = "LICENSE"}
requires-python = ">=3.7"
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]


[tool.setuptools.dynamic]

version = {attr = "cmsml.__meta__.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements_dev.txt"]}}


[tool.setuptools]

include-package-data = false


[tool.setuptools.packages.find]

include = ["cmsml*"]
exclude = ["tests/*"]
